--- a/client/src/styles/home/home.css
+++ b/client/src/styles/home/home.css
@@ -9,19 +9,19 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-.home header {
+.home header, .home main {
   width: 100%;
   height: auto;
 }
 
-.home header .head-slide-container {
+.home header .slide-container, .home main .slide-container {
   position: relative;
   width: 100%;
   height: 60vh;
   overflow: hidden;
 }
 
-.home header .head-slide-container .slider {
+.home header .slide-container .slider, .home main .slide-container .slider {
   position: absolute;
   top: 0;
   left: 0;
@@ -32,32 +32,32 @@ body {
           animation: slide 15s linear infinite;
 }
 
-.home header .head-slide-container .slider .slide {
+.home header .slide-container .slider .slide, .home main .slide-container .slider .slide {
   position: relative;
   width: 25%;
   height: 100%;
   float: left;
 }
 
-.home header .head-slide-container .slider .slide.slide1 {
+.home header .slide-container .slider .slide.slide1, .home main .slide-container .slider .slide.slide1 {
   background: url("../../cos-img/hand.jpg");
   background-size: cover;
   background-position: center;
 }
 
-.home header .head-slide-container .slider .slide.slide2 {
+.home header .slide-container .slider .slide.slide2, .home main .slide-container .slider .slide.slide2 {
   background: url("../../cos-img/lipstick.jpg");
   background-size: cover;
   background-position: center;
 }
 
-.home header .head-slide-container .slider .slide.slide3 {
+.home header .slide-container .slider .slide.slide3, .home main .slide-container .slider .slide.slide3 {
   background: url("../../cos-img/woman.jpg");
   background-size: cover;
   background-position: center;
 }
 
-.home header .head-slide-container .slider .slide .caption {
+.home header .slide-container .slider .slide .caption, .home main .slide-container .slider .slide .caption {
   position: absolute;
   bottom: 60px;
   left: 60px;
@@ -68,14 +68,14 @@ body {
           box-sizing: border-box;
 }
 
-.home header .head-slide-container .slider .slide .caption h2 {
+.home header .slide-container .slider .slide .caption h2, .home main .slide-container .slider .slide .caption h2 {
   margin: 0 0 20px;
   padding: 0;
   color: #fff;
   font-size: 48px;
 }
 
-.home header .head-slide-container .slider .slide .caption p {
+.home header .slide-container .slider .slide .caption p, .home main .slide-container .slider .slide .caption p {
   margin: 0;
   padding: 0;
   color: #fff;
@@ -136,7 +136,7 @@ body {
   }
 }
 
-.home header .head-intro {
+.home header .head-intro, .home main .head-intro {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -149,7 +149,7 @@ body {
   background-color: #fdfdfd;
 }
 
-.home header .head-intro .square {
+.home header .head-intro .square, .home main .head-intro .square {
   height: 400px;
   width: 150px;
   background: linear-gradient(45deg, #5f072b, #ff7bd8);
@@ -157,12 +157,12 @@ body {
   margin-left: 2vw;
 }
 
-.home header .head-intro .text {
+.home header .head-intro .text, .home main .head-intro .text {
   width: 350px;
   color: #3a3a3a;
 }
 
-.home header .head-intro .text a {
+.home header .head-intro .text a, .home main .head-intro .text a {
   display: block;
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -179,18 +179,18 @@ body {
   transition: 3s ease;
 }
 
-.home header .head-intro .text a:hover {
+.home header .head-intro .text a:hover, .home main .head-intro .text a:hover {
   background-color: #d132a1;
 }
 
-.home header .head-intro .image img {
+.home header .head-intro .image img, .home main .head-intro .image img {
   width: 400px;
   height: 500px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.home header .head-body {
+.home header .head-body, .home main .head-body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -202,7 +202,7 @@ body {
           justify-content: center;
 }
 
-.home header .head-body .image img {
+.home header .head-body .image img, .home main .head-body .image img {
   width: 35vw;
   height: 270px;
   border: 1px solid #cacaca;
@@ -210,7 +210,7 @@ body {
      object-fit: cover;
 }
 
-.home header .head-body .text {
+.home header .head-body .text, .home main .head-body .text {
   width: 35%;
   font-size: 1.2em;
   background-color: #eeeeee;
@@ -328,19 +328,19 @@ body {
   color: #47bd82;
 }
 
-.home main .main-products .whats-new-section {
+.home main .main-products .whats-new-section, .home main .main-products .whats-popular-section {
   width: 100%;
   height: auto;
   margin-top: 3%;
 }
 
-.home main .main-products .whats-new-section h2 {
+.home main .main-products .whats-new-section h2, .home main .main-products .whats-popular-section h2 {
   text-align: center;
   font-weight: 100;
   font-size: 1.7em;
 }
 
-.home main .main-products .whats-new-section h2:before, .home main .main-products .whats-new-section h2:after {
+.home main .main-products .whats-new-section h2:before, .home main .main-products .whats-new-section h2:after, .home main .main-products .whats-popular-section h2:before, .home main .main-products .whats-popular-section h2:after {
   content: "";
   width: 30%;
   height: 1px;
@@ -349,15 +349,15 @@ body {
   margin-top: 3.3vh;
 }
 
-.home main .main-products .whats-new-section h2:before {
+.home main .main-products .whats-new-section h2:before, .home main .main-products .whats-popular-section h2:before {
   left: 7%;
 }
 
-.home main .main-products .whats-new-section h2:after {
+.home main .main-products .whats-new-section h2:after, .home main .main-products .whats-popular-section h2:after {
   right: 7%;
 }
 
-.home main .main-products .whats-new-section .new-products {
+.home main .main-products .whats-new-section .new-products, .home main .main-products .whats-new-section .popular-products, .home main .main-products .whats-popular-section .new-products, .home main .main-products .whats-popular-section .popular-products {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -369,19 +369,19 @@ body {
           align-items: center;
 }
 
-.home main .main-products .whats-new-section .new-products button {
+.home main .main-products .whats-new-section .new-products button, .home main .main-products .whats-new-section .popular-products button, .home main .main-products .whats-popular-section .new-products button, .home main .main-products .whats-popular-section .popular-products button {
   font-size: 4em;
   background: transparent;
   border: 0;
   color: black;
 }
 
-.home main .main-products .whats-new-section .new-products button:hover {
+.home main .main-products .whats-new-section .new-products button:hover, .home main .main-products .whats-new-section .popular-products button:hover, .home main .main-products .whats-popular-section .new-products button:hover, .home main .main-products .whats-popular-section .popular-products button:hover {
   cursor: pointer;
   color: #5f072b;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide {
+.home main .main-products .whats-new-section .new-products .products-slide, .home main .main-products .whats-new-section .popular-products .products-slide, .home main .main-products .whats-popular-section .new-products .products-slide, .home main .main-products .whats-popular-section .popular-products .products-slide {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -396,19 +396,19 @@ body {
   text-align: center;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item, .home main .main-products .whats-new-section .popular-products .products-slide .product-item, .home main .main-products .whats-popular-section .new-products .products-slide .product-item, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item {
   display: inline-block;
   text-align: center;
   width: 280px;
   margin-top: 3em;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail, .home main .main-products .whats-new-section .popular-products .products-slide .product-item .detail, .home main .main-products .whats-popular-section .new-products .products-slide .product-item .detail, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .detail {
   color: black;
   text-decoration: none;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail h5 {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail h5, .home main .main-products .whats-new-section .popular-products .products-slide .product-item .detail h5, .home main .main-products .whats-popular-section .new-products .products-slide .product-item .detail h5, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .detail h5 {
   border: 1px solid;
   position: absolute;
   margin: 2px 5px;
@@ -416,32 +416,181 @@ body {
   color: #0f67eb;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail img {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail img, .home main .main-products .whats-new-section .popular-products .products-slide .product-item .detail img, .home main .main-products .whats-popular-section .new-products .products-slide .product-item .detail img, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .detail img {
   width: 50%;
   height: 160px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail .text {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail .text, .home main .main-products .whats-new-section .popular-products .products-slide .product-item .detail .text, .home main .main-products .whats-popular-section .new-products .products-slide .product-item .detail .text, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .detail .text {
   width: 80%;
   display: inline-block;
   height: 150px;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail .text span {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail .text span, .home main .main-products .whats-new-section .popular-products .products-slide .product-item .detail .text span, .home main .main-products .whats-popular-section .new-products .products-slide .product-item .detail .text span, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .detail .text span {
   display: block;
   font-size: 14px;
   color: #201d1d;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail .text p {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item .detail .text p, .home main .main-products .whats-new-section .popular-products .products-slide .product-item .detail .text p, .home main .main-products .whats-popular-section .new-products .products-slide .product-item .detail .text p, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .detail .text p {
   text-shadow: 0px 0px 1px black;
 }
 
-.home main .main-products .whats-new-section .new-products .products-slide .product-item .price {
+.home main .main-products .whats-new-section .new-products .products-slide .product-item .price, .home main .main-products .whats-new-section .popular-products .products-slide .product-item .price, .home main .main-products .whats-popular-section .new-products .products-slide .product-item .price, .home main .main-products .whats-popular-section .popular-products .products-slide .product-item .price {
   border: 1px solid #2cbd00;
   color: #399c00;
   letter-spacing: 2px;
+}
+
+.home main .main-products .main-slide-section {
+  margin-top: 3%;
+}
+
+.home main .main-products .main-slide-section h2 {
+  text-align: center;
+  font-weight: 200;
+  margin: 20px 0 25px 0;
+}
+
+.home main .main-products .main-slide-section h2:before, .home main .main-products .main-slide-section h2:after {
+  content: ">>>";
+  width: 20%;
+  height: 1px;
+  background-color: #666;
+  position: absolute;
+  margin-top: 3.3vh;
+}
+
+.home main .main-products .main-slide-section h2:before {
+  left: 15%;
+}
+
+.home main .main-products .main-slide-section h2:after {
+  right: 15%;
+}
+
+.home main .main-products .main-slide-section .slide-container {
+  height: 65vh;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider {
+  -webkit-animation: slide 20s linear infinite;
+          animation: slide 20s linear infinite;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide a {
+  text-decoration: none;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide a:active p {
+  color: #ea00ff;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide .poster {
+  width: 22vw;
+  height: 90%;
+  margin-top: 5%;
+  text-align: center;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide .poster p {
+  background: black;
+  color: white;
+  font-size: 24px;
+  width: 22vw;
+  padding: 3px;
+  border-top: 2px solid #ea00ff;
+  position: absolute;
+  bottom: 5%;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide .poster p:hover {
+  background-color: #ea00ff;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide1 {
+  background: white;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide1 .poster.one {
+  background: url("../../cos-img/product-img/posters/loreal_poster (3).jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide1 .poster.two {
+  background: url("../../cos-img/product-img/posters/Syoss_poster-696x522.jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide1 .poster.three {
+  background: url("../../cos-img/product-img/posters/garnier_poster.jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide1 .poster.four {
+  background: url("../../cos-img/product-img/posters/tresemme_poster.jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide2 {
+  background: white;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide2 .poster.one {
+  background: url("../../cos-img/product-img/posters/garnier_poster (2).jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide2 .poster.two {
+  background: url("../../cos-img/product-img/posters/loreal_poster (4).jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide2 .poster.three {
+  background: url("../../cos-img/product-img/posters/syoss_poster.jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide2 .poster.four {
+  background: url("../../cos-img/product-img/posters/loreal_poster (1).jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide3 {
+  background: white;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide3 .poster.one {
+  background: url("../../cos-img/product-img/posters/loreal_poster (2).jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide3 .poster.two {
+  background: url("../../cos-img/product-img/posters/calliderm_poster.jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide3 .poster.three {
+  background: url("../../cos-img/product-img/posters/nevia_poster.jpg");
+  background-size: contain;
+}
+
+.home main .main-products .main-slide-section .slide-container .slider .slide.slide3 .poster.four {
+  background: url("../../cos-img/product-img/posters/gliss_poster.jpg");
+  background-size: contain;
 }
 /*# sourceMappingURL=home.css.map */
