--- a/client/src/styles/products-linkPage/productsLinkPage.scss
+++ b/client/src/styles/products-linkPage/productsLinkPage.scss
@@ -1,80 +1,155 @@
 
 .products-link-page {
-    background: rgb(255, 255, 255);   
-        
-    .multi-range-slider {
-        position: relative;
-        width: 30%;
-        max-width: 300px;
-        height: 200px;
+    margin-top: -4em;
 
-        .slider {
+    .side-bar {
+        position: fixed;
+        width: 18%;
+        height: 100%;
+        text-align: center;
+
+        .multi-range-slider {
             position: relative;
-            z-index: 1;
-            height: 2px;
-
-            .track {
-                position: absolute;
-                width: 100%;
-                height: 1.5px;
+            width: 90%;
+            max-width: 200px;
+            height: 80px;
+            margin-top: 10px;
+            display: inline-block;
+    
+            .slider {
+                position: relative;
                 z-index: 1;
+                height: 2px;
+    
+                .track {
+                    position: absolute;
+                    width: 100%;
+                    height: 1.5px;
+                    z-index: 1;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    border-radius: 5px;
+                    background-color: rgb(247, 119, 178);
+                }
+                .range {
+                    position: absolute;
+                    z-index: 1;
+                    left: 1%;
+                    right: 1%;
+                    top: 0;
+                    bottom: 0;
+                    border-radius: 5px;
+                    background-color: rgb(190, 190, 190);
+                }
+                .thumb {
+                    position: absolute;
+                    z-index: 3;
+                    width: 15px;
+                    height: 15px;
+                    background-color: rgb(190, 190, 190);
+                    border-radius: 50%;
+                    margin-top: 4px;
+    
+                }
+                .thumb.left {
+                    left: 1%;
+                    transform: translate(-5px, -10px);
+                    span {
+                        position: absolute;
+                        top: 90%;
+                        transform: translate(-12px, 0);
+                    }
+                }
+                .thumb.right {
+                    right: 1%;
+                    transform: translate(5px, -10px);
+                    span {
+                        position: absolute;
+                        bottom: 90%;
+                        transform: translate(-23px, 0);
+                    }
+                }
+            }
+            input[type=range] {
+                position: absolute;
+                pointer-events: none;
+                appearance: none;
+                z-index: 2;
+                height: 3px;
                 left: 0;
-                right: 0;
-                bottom: 0;
-                border-radius: 5px;
-                background-color: rgb(247, 119, 178);
+                width: 100%;
+                opacity: 0;
             }
-            .range {
-                position: absolute;
-                z-index: 1;
-                left: 1%;
-                right: 1%;
-                top: 0;
-                bottom: 0;
-                border-radius: 5px;
-                background-color: rgb(190, 190, 190);
+            input[type=range]::-webkit-slider-thumb {
+                pointer-events: all;
             }
-            .thumb {
-                position: absolute;
-                z-index: 3;
-                width: 15px;
-                height: 15px;
-                background-color: rgb(190, 190, 190);
-                border-radius: 50%;
-                margin-top: 4px;
+        }
+        .check-boxes, 
+        .select-box {
+            text-align: left;
+            margin-left: 3%;
+            padding: 2em 5px;
+        }
+        .check-boxes {
+            
+            p {
+                display: flex;
+                align-items: center;
+                margin-top: 10px;
 
-            }
-            .thumb.left {
-                left: 1%;
-                transform: translate(-5px, -10px);
-                span {
-                    position: absolute;
-                    top: 90%;
+                label {
+                    margin-left: 5px;
+                    font-size: 18px;
+                    letter-spacing: 1px;
                 }
-            }
-            .thumb.right {
-                right: 1%;
-                transform: translate(5px, -10px);
-                span {
-                    position: absolute;
-                    bottom: 90%; 
+                input[type=checkbox] {
+                    position: relative;
+                    width: 20px;
+                    height: 20px;
+                    appearance: none;
+                    outline: none;
+                    border: 1px solid grey;
+                    border-radius: 5px;
+                }
+                input[type=checkbox]:checked:before {
+                   content: "X";
+                   position: absolute;
+                   top: -22%;
+                   left: 19%;
+                   font-size: 18px; 
+                   color: rgb(202, 200, 200);
+                }
+                input[type=checkbox]:checked + label {
+                    color: rgb(226, 226, 226);
                 }
             }
         }
-        input[type=range] {
-            position: absolute;
-            pointer-events: none;
-            appearance: none;
-            z-index: 2;
-            height: 3px;
-            width: 100%;
-            opacity: 0;
+        .select-box {
+            background-color: rgb(212, 211, 211);
         }
-        input[type=range]::-webkit-slider-thumb {
-            pointer-events: all;
+        h1 {
+            text-transform: uppercase;
+            margin-top: 3em;
+            font-family: serif;
+        }
+    }    
+    .products-list {
+        margin-left: 18%;
+        padding: 10px;
+        display: flex;
+        flex-wrap: wrap;
+
+        &-item {
+
+            img {
+                width: 200px;
+                height: 200px;
+                object-fit: contain;
+               
+            }
         }
     }
-
 }
 
 
