--- a/client/src/styles/products-linkPage/productsLinkPage.css
+++ b/client/src/styles/products-linkPage/productsLinkPage.css
@@ -1,20 +1,34 @@
 .products-link-page {
-  margin-top: -4em;
+  margin-top: -2em;
 }
 
 .products-link-page .side-bar {
   position: fixed;
   width: 18%;
   height: 100%;
-  text-align: center;
+}
+
+.products-link-page .side-bar h3 {
+  color: #f370e1;
+  font-weight: 100;
+  margin-bottom: 10px;
+  font-family: serif;
+  letter-spacing: 1px;
+  font-size: 22px;
+}
+
+.products-link-page .side-bar .check-boxes,
+.products-link-page .side-bar .select-box,
+.products-link-page .side-bar .multi-range-slider {
+  margin-left: 3%;
+  padding: 1.5em 5px;
 }
 
 .products-link-page .side-bar .multi-range-slider {
   position: relative;
-  width: 90%;
+  width: 80%;
   max-width: 200px;
   height: 80px;
-  margin-top: 10px;
   display: inline-block;
 }
 
@@ -66,8 +80,8 @@
 .products-link-page .side-bar .multi-range-slider .slider .thumb.left span {
   position: absolute;
   top: 90%;
-  -webkit-transform: translate(-12px, 0);
-          transform: translate(-12px, 0);
+  -webkit-transform: translate(-5px, 0);
+          transform: translate(-5px, 0);
 }
 
 .products-link-page .side-bar .multi-range-slider .slider .thumb.right {
@@ -79,8 +93,8 @@
 .products-link-page .side-bar .multi-range-slider .slider .thumb.right span {
   position: absolute;
   bottom: 90%;
-  -webkit-transform: translate(-23px, 0);
-          transform: translate(-23px, 0);
+  -webkit-transform: translate(-5px, 0);
+          transform: translate(-5px, 0);
 }
 
 .products-link-page .side-bar .multi-range-slider input[type=range] {
@@ -98,13 +112,6 @@
 
 .products-link-page .side-bar .multi-range-slider input[type=range]::-webkit-slider-thumb {
   pointer-events: all;
-}
-
-.products-link-page .side-bar .check-boxes,
-.products-link-page .side-bar .select-box {
-  text-align: left;
-  margin-left: 3%;
-  padding: 2em 5px;
 }
 
 .products-link-page .side-bar .check-boxes p {
@@ -148,14 +155,23 @@
   color: #e2e2e2;
 }
 
-.products-link-page .side-bar .select-box {
-  background-color: #d4d3d3;
+.products-link-page .side-bar .select-box select {
+  border: 1px solid #d8d8d8;
+  outline: none;
+  font-size: 14px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  padding: 3px 10px;
 }
 
 .products-link-page .side-bar h1 {
   text-transform: uppercase;
   margin-top: 3em;
-  font-family: serif;
+  letter-spacing: 2px;
+  -webkit-transform: translate(15px, 0);
+          transform: translate(15px, 0);
+  color: #583e3e;
 }
 
 .products-link-page .products-list {
