--- a/client/src/styles/products-linkPage/productsLinkPage.scss
+++ b/client/src/styles/products-linkPage/productsLinkPage.scss
@@ -1,21 +1,33 @@
 
 .products-link-page {
-    margin-top: -4em;
-
+    margin-top: -2em;
+    
     .side-bar {
         position: fixed;
         width: 18%;
         height: 100%;
-        text-align: center;
 
+        h3 {
+            color: rgb(243, 112, 225);
+            font-weight: 100;
+            margin-bottom: 10px;
+            font-family: serif;
+            letter-spacing: 1px;
+            font-size: 22px;
+        }
+        .check-boxes, 
+        .select-box,
+        .multi-range-slider {
+            margin-left: 3%;
+            padding: 1.5em 5px;
+        }
         .multi-range-slider {
             position: relative;
-            width: 90%;
+            width: 80%;
             max-width: 200px;
             height: 80px;
-            margin-top: 10px;
             display: inline-block;
-    
+            
             .slider {
                 position: relative;
                 z-index: 1;
@@ -58,7 +70,7 @@
                     span {
                         position: absolute;
                         top: 90%;
-                        transform: translate(-12px, 0);
+                        transform: translate(-5px, 0);
                     }
                 }
                 .thumb.right {
@@ -67,7 +79,7 @@
                     span {
                         position: absolute;
                         bottom: 90%;
-                        transform: translate(-23px, 0);
+                        transform: translate(-5px, 0);
                     }
                 }
             }
@@ -85,14 +97,8 @@
                 pointer-events: all;
             }
         }
-        .check-boxes, 
-        .select-box {
-            text-align: left;
-            margin-left: 3%;
-            padding: 2em 5px;
-        }
         .check-boxes {
-            
+
             p {
                 display: flex;
                 align-items: center;
@@ -126,12 +132,21 @@
             }
         }
         .select-box {
-            background-color: rgb(212, 211, 211);
+
+            select {
+                border: 1px solid rgb(216, 216, 216);
+                outline: none;
+                font-size: 14px;
+                appearance: none;
+                padding: 3px 10px;
+            }
         }
         h1 {
             text-transform: uppercase;
             margin-top: 3em;
-            font-family: serif;
+            letter-spacing: 2px;
+            transform: translate(15px, 0);
+            color: rgb(88, 62, 62);
         }
     }    
     .products-list {
