--- a/client/src/styles/products-linkPage/productsLinkPage.scss
+++ b/client/src/styles/products-linkPage/productsLinkPage.scss
@@ -143,7 +143,7 @@
         }
         h1 {
             text-transform: uppercase;
-            margin-top: 3em;
+            margin-top: 2.4em;
             letter-spacing: 2px;
             transform: translate(15px, 0);
             color: rgb(88, 62, 62);
@@ -154,14 +154,48 @@
         padding: 10px;
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-evenly;
 
         &-item {
+            display: inline-block;
+            text-align: center;
+            width: 280px;
+            margin-top: 3em;
 
-            img {
-                width: 200px;
-                height: 200px;
-                object-fit: contain;
-               
+            .detail {
+                color: black;
+                text-decoration: none;
+                
+                h5 {
+                    position: absolute;
+                    margin: 2px 5px;
+                    padding: 3px 7px;
+                    color: rgb(46, 104, 51);
+                }
+                img {
+                    width: 55%;
+                    height: 170px;
+                    object-fit: contain;
+                }
+                .text {
+                    width: 80%;
+                    display: inline-block;
+                    height: 150px;
+
+                    span {
+                        display: block;
+                        font-size: 14px;
+                        color: rgb(32, 29, 29);
+                    }
+                    p {
+                        text-shadow: 0px 0px 1px black;
+                    }
+                }
+            }
+            .price {
+                border: 1px solid rgb(44, 189, 0);
+                color: rgb(57, 156, 0);
+                letter-spacing: 2px;
             }
         }
     }
