--- a/client/src/styles/products-linkPage/productsLinkPage.css
+++ b/client/src/styles/products-linkPage/productsLinkPage.css
@@ -177,7 +177,7 @@
   cursor: pointer;
 }
 
-.products-link-page .side-bar h1 {
+.products-link-page .side-bar .brand-of h1 {
   text-transform: uppercase;
   margin-top: 2.4em;
   letter-spacing: 2px;
@@ -250,5 +250,109 @@
   border: 1px solid #2cbd00;
   color: #399c00;
   letter-spacing: 2px;
+}
+
+.products-link-page .products-list .no-products h1 {
+  position: absolute;
+  left: 40%;
+  top: 50%;
+}
+
+@media (max-width: 1000px) {
+  .products-link-page .side-bar {
+    position: relative;
+    margin-top: 7em;
+    width: 100%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 100px 100px 50px;
+        grid-template-rows: 100px 100px 50px;
+    border-bottom: 1px solid #c4c4c4;
+    border-radius: 0 0 20px 20px;
+    background: -webkit-gradient(linear, left bottom, left top, from(#fdfdfd), to(white));
+    background: linear-gradient(360deg, #fdfdfd, white);
+  }
+  .products-link-page .side-bar .check-boxes,
+  .products-link-page .side-bar .select-box,
+  .products-link-page .side-bar .multi-range-slider {
+    margin-left: 0;
+    padding: 0;
+  }
+  .products-link-page .side-bar .select-box {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    text-align: center;
+  }
+  .products-link-page .side-bar .multi-range-slider {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    max-width: initial;
+    width: initial;
+    display: initial;
+    text-align: center;
+    margin-top: 10px;
+  }
+  .products-link-page .side-bar .multi-range-slider .items {
+    display: inline-block;
+    width: 45%;
+  }
+  .products-link-page .side-bar .multi-range-slider .items .input {
+    position: relative;
+  }
+  .products-link-page .side-bar .check-boxes {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1/3;
+    text-align: center;
+    z-index: 9;
+  }
+  .products-link-page .side-bar .check-boxes .items {
+    display: inline-block;
+  }
+  .products-link-page .side-bar .brand-of {
+    -webkit-transform: translate(-25px, 0);
+            transform: translate(-25px, 0);
+    text-align: center;
+    margin-top: 15px;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .products-link-page .products-list {
+    margin-left: 0;
+    padding: 20px;
+    margin-top: -2em;
+  }
+  .products-link-page .products-list .no-products {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .products-link-page .products-list .no-products h1 {
+    left: initial;
+    top: 60%;
+  }
 }
 /*# sourceMappingURL=productsLinkPage.css.map */
