--- a/client/src/styles/products-linkPage/productsLinkPage.scss
+++ b/client/src/styles/products-linkPage/productsLinkPage.scss
@@ -143,7 +143,7 @@
                 &:hover {cursor: pointer;}
             }
         }
-        h1 {
+        .brand-of h1 {
             text-transform: uppercase;
             margin-top: 2.4em;
             letter-spacing: 2px;
@@ -203,6 +203,88 @@
                 border: 1px solid rgb(44, 189, 0);
                 color: rgb(57, 156, 0);
                 letter-spacing: 2px;
+            }
+        }
+        .no-products h1 {
+            position: absolute;
+            left: 40%;
+            top: 50%
+        }
+    }
+
+
+    @media (max-width: 1000px) {
+        .side-bar {
+            position: relative;
+            margin-top: 7em;
+            width: 100%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 100px 100px 50px;
+            border-bottom: 1px solid rgb(196, 196, 196);
+            border-radius: 0 0 20px 20px;
+            background: linear-gradient( 360deg,rgb(253, 253, 253), rgb(255, 255, 255));
+
+            .check-boxes,
+            .select-box,
+            .multi-range-slider {
+                margin-left: 0;
+                padding: 0;
+            }
+            .select-box {
+               grid-column: 1/2;
+               grid-row: 1/2;
+               text-align: center;
+            }
+            .multi-range-slider {
+                grid-column: 1/2;
+                grid-row: 2/3;
+                max-width: initial;
+                width: initial;
+                display: initial;
+                text-align: center;
+                margin-top: 10px;
+                
+                .items {
+                    display: inline-block;
+                    width: 45%;
+
+                    .input {
+                        position: relative;
+                    }
+                }
+            }
+            .check-boxes {
+                grid-column: 2/3;
+                grid-row: 1/3;
+                text-align: center;
+                z-index: 9;
+                .items {
+                    display: inline-block;
+                }
+            }
+            .brand-of {
+                transform: translate(-25px, 0);
+                text-align: center;
+                margin-top: 15px;
+                grid-column: 1/3;
+                grid-row: 2/3;
+            }
+        }
+        .products-list {
+            margin-left: 0;
+            padding: 20px;
+            margin-top: -2em;
+
+            .no-products {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                h1 {
+                    left: initial;
+                    top: 60%;
+                }
             }
         }
     }
