the checkboxes fight is over

--- a/client/src/styles/products-linkPage/productsLinkPage.css
+++ b/client/src/styles/products-linkPage/productsLinkPage.css
@@ -128,6 +128,7 @@
   margin-left: 5px;
   font-size: 18px;
   letter-spacing: 1px;
+  color: #7c4c4c;
 }
 
 .products-link-page .side-bar .check-boxes p label:hover {
@@ -142,7 +143,7 @@
      -moz-appearance: none;
           appearance: none;
   outline: none;
-  border: 1px solid grey;
+  border: 1px solid #946868;
   border-radius: 5px;
 }
 
