--- a/client/src/styles/home/home.css
+++ b/client/src/styles/home/home.css
@@ -328,6 +328,7 @@ body {
   top: 0;
   left: 12%;
   border-radius: 10em 0 10em 6px;
+  padding: .8em 1.8em;
 }
 
 .home main .main-products .slider-section .slide .slide-item .varni span {
@@ -659,5 +660,74 @@ body {
 .home main .main-products .main-slide-section .slide-container .slider .slide.slide3 .poster.four {
   background: url("../../cos-img/product-img/posters/gliss_poster.jpg");
   background-size: contain;
+}
+
+@media (max-width: 850px) {
+  .home header .slide-container {
+    height: 40vh;
+  }
+  .home header .head-intro {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .home header .head-intro .square {
+    width: 260px;
+    height: 350px;
+  }
+  .home header .head-intro .image {
+    background: url("../../cos-img/four.jpg");
+    background-size: cover;
+    background-position: right;
+    width: 80%;
+    height: 35vh;
+    border-radius: 15em 0 10em 0;
+  }
+  .home header .head-intro .image img {
+    display: none;
+  }
+  .head-body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .head-body .image {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    text-align: center;
+    margin-top: 2vh;
+  }
+  .head-body .image img {
+    width: 80% !important;
+    height: 35vh !important;
+    border-radius: 12em 0 10em 0;
+  }
+  .head-body .text {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    width: 80% !important;
+    font-size: 1.5em !important;
+    text-align: center;
+    border-radius: 0 5em 0 3em;
+    margin-top: 2vh;
+  }
+  .home main .main-products .slider-section .slide .slide-item img {
+    height: 50vh !important;
+  }
+  .home main .main-products .main-slide-section .slide-container {
+    height: 50vh;
+  }
+  .home main .main-products .main-slide-section .slide-container .slider .slide .poster {
+    width: 45vw;
+    height: 90%;
+  }
+  .home main .main-products .main-slide-section .slide-container .slider .slide .poster p {
+    position: relative;
+    border: 2px solid white;
+  }
 }
 /*# sourceMappingURL=home.css.map */
