--- a/client/src/styles/home/home.scss
+++ b/client/src/styles/home/home.scss
@@ -237,6 +237,7 @@ body {
                             left: 12%;
                             border-radius: 10em 0 10em 6px;
                             span {color: rgb(161, 7, 136);}
+                            padding: .8em 1.8em;
                         }
                         .perf {
                             top: 0;
@@ -480,3 +481,69 @@ body {
 
 }
 
+@media (max-width: 850px) {
+    .home header {
+        .slide-container {
+            height: 40vh;
+        }
+        .head-intro {
+            flex-wrap: wrap;
+            justify-content: space-around;
+    
+            .square {
+                width: 260px;
+                height: 350px;
+            }
+            .image {
+                background: url('../../cos-img/four.jpg');
+                background-size: cover;
+                background-position: right;
+                width: 80%;
+                height: 35vh;
+                border-radius: 15em 0 10em 0;
+    
+                img {display: none;}
+            }
+        }
+    }
+    .head-body {
+        flex-direction: column;
+
+        .image {
+            order: 2;
+            text-align: center;
+            margin-top: 2vh;
+
+            img {
+                width: 80% !important;
+                height: 35vh !important;
+                border-radius: 12em 0 10em 0;
+            }
+        }
+        .text {
+            order: 1;
+            width: 80% !important;
+            font-size: 1.5em !important;
+            text-align: center;
+            border-radius: 0 5em 0 3em;
+            margin-top: 2vh;
+        }
+    }
+
+    .home main .main-products {
+        .slider-section .slide .slide-item img {
+            height: 50vh !important;
+        }
+        .main-slide-section .slide-container {
+            height: 50vh;
+            .slider .slide .poster {
+                width: 45vw;
+                height: 90%;
+                p {
+                    position: relative;
+                    border: 2px solid white;
+                }
+            }
+        }
+    }
+}
