--- a/client/src/styles/navbar/navbar.scss
+++ b/client/src/styles/navbar/navbar.scss
@@ -173,7 +173,7 @@ body.hide {overflow-y: hidden !important;}
     @media (max-width: 1000px) {
         
         header {
-            padding: 0 100px !important;
+            padding: 1px 100px !important;
 
             .menu-lines {
                 display: block;
