--- a/client/src/styles/products-linkPage/productsLinkPage.css
+++ b/client/src/styles/products-linkPage/productsLinkPage.css
@@ -268,8 +268,8 @@
     display: grid;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 100px 100px 50px;
-        grid-template-rows: 100px 100px 50px;
+    -ms-grid-rows: 75px 75px 40px;
+        grid-template-rows: 75px 75px 40px;
     border-bottom: 1px solid #c4c4c4;
     border-radius: 0 0 20px 20px;
     background: -webkit-gradient(linear, left bottom, left top, from(#fdfdfd), to(white));
@@ -323,11 +323,17 @@
   .products-link-page .side-bar .check-boxes .items {
     display: inline-block;
   }
+  .products-link-page .side-bar .check-boxes .items p {
+    margin-top: 3px;
+  }
+  .products-link-page .side-bar .check-boxes .items p label {
+    font-size: 16px;
+  }
   .products-link-page .side-bar .brand-of {
-    -webkit-transform: translate(-25px, 0);
-            transform: translate(-25px, 0);
+    -webkit-transform: translate(-15px, 0);
+            transform: translate(-15px, 0);
+    margin-top: -12px;
     text-align: center;
-    margin-top: 15px;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
