--- a/client/src/styles/products-linkPage/productsLinkPage.scss
+++ b/client/src/styles/products-linkPage/productsLinkPage.scss
@@ -221,7 +221,7 @@
             width: 100%;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 100px 100px 50px;
+            grid-template-rows: 75px 75px 40px;
             border-bottom: 1px solid rgb(196, 196, 196);
             border-radius: 0 0 20px 20px;
             background: linear-gradient( 360deg,rgb(253, 253, 253), rgb(255, 255, 255));
@@ -262,12 +262,19 @@
                 z-index: 9;
                 .items {
                     display: inline-block;
+
+                    p {
+                        margin-top: 3px;
+                        label {
+                            font-size: 16px;
+                        }
+                    }
                 }
             }
             .brand-of {
-                transform: translate(-25px, 0);
+                transform: translate(-15px, 0);
+                margin-top: -12px;
                 text-align: center;
-                margin-top: 15px;
                 grid-column: 1/3;
                 grid-row: 2/3;
             }
